# afl-predictor

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
data/: validation_report.json
deploy/: conformal.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  MarginHistogram.tsx  api.ts  index.css  teams.ts
notebooks/: 01_elo_baseline.ipynb
scripts/: build_conformal.py  build_details.py  build_predictions.py  eval_availability.py  eval_ratings.py  export_serving_db.py  reingest_real_stats.py  validation_report.py  xscore_regression.py  xscore_research.py  xscore_research_notes.md
src/: __init__.py  config.py
src/api/: main.py
src/cli/: orchestrator.py
src/db/: models.py  session.py
src/eval/: backtest.py  calibration.py  hybrid_backtest.py  metrics.py  squiggle_benchmark.py
src/ingest/: lineups.py  narrative.py  pipeline.py  player_stats.py  squiggle.py  team_features.py
src/intelligence/: __init__.py  briefing.py  lineups.py  market.py  match_centre.py  matchups.py  news.py  player_performance.py  recent_lineups.py  service.py  similar_games.py  squads.py  teams.py
tests/: test_backtest.py  test_calibration.py  test_calibration_model.py  test_conformal.py  test_elo.py  test_intelligence.py  test_lineup_adjust.py  test_matchups.py  test_player_value.py  test_predict.py  test_prob_model.py  test_ratings.py  test_recent_lineups.py  test_similar_games.py  test_simulator.py  test_squads.py  test_teams.py
(+35 files in other folders)
